--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.40.0",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "mysql2": "^3.9.8",
     "next": "14.2.3",
