--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mysql2": "^3.9.8",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "redis": "^4.6.14"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
