--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
