--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "formidable": "^3.5.1",
     "micro-cors": "^0.1.1",
     "mysql2": "^3.9.8",
     "next": "^14.2.4",
@@ -35,6 +36,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/cors": "^2.8.17",
+    "@types/formidable": "^3.4.5",
     "@types/micro-cors": "^0.1.5",
     "@types/node": "^20.12.12",
     "@types/react": "^18",
