[Modify] 프로젝트 설정 파일
Chore: 프로젝트 실행 및 테스트 설정 수정

테스트 환경에 적합하게 설정 파일 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,10 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    "**/**/*.ts",
+    "**/**/*.tsx",
+    ".next/types/**/*.ts", 
+    "src/components/notification/__test__/NotificationItem.test.tsx"
   ],
   "exclude": [
     "node_modules"
