--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.614.0",
+    "@aws-sdk/lib-storage": "^3.614.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.49.2",
     "clsx": "^2.1.1",
@@ -38,12 +40,6 @@
     "@jest/globals": "^29.7.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
-    "@types/cors": "^2.8.17",
-    "@types/micro-cors": "^0.1.5",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/uuid": "^9.0.8",
     "@types/cors": "^2.8.17",
     "@types/formidable": "^3.4.5",
     "@types/micro-cors": "^0.1.5",
